Add user overlap notebook and its pickles

--- a/05_Keyword Extraction.ipynb
+++ b/05_Keyword Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,49 +44,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "like\n",
-      "im\n",
-      "right\n",
-      "girls\n",
-      "girl\n",
-      "oh\n",
+      "fucking\n",
+      "say fuck\n",
+      "fellas\n",
+      "motherfucker\n",
+      "motherfuckers\n",
+      "shes\n",
+      "sense women\n",
+      "cos\n",
+      "happy yes\n",
+      "gonna\n",
       "dont\n",
-      "thats\n",
-      "months\n",
-      "month\n",
-      "know\n",
-      "asian\n",
-      "guy\n",
-      "guys\n",
-      "wanna\n",
-      "lets\n",
-      "let\n",
-      "porn\n",
-      "cause\n",
-      "neighbor\n",
-      "everybody\n",
-      "worst\n",
-      "chooseyourown\n",
-      "yells\n",
-      "director\n",
-      "books\n",
-      "book\n",
-      "hes\n",
-      "everyones\n",
-      "spoiler\n",
-      "people\n"
+      "saying\n",
+      "damn\n",
+      "like\n",
+      "lord\n",
+      "come\n",
+      "comes\n",
+      "coming\n"
      ]
     }
    ],
    "source": [
-    "print(keywords.keywords(clean_corpus.Transcript[0]))"
+    "print(keywords.keywords(clean_corpus.Transcript[4]))"
    ]
   },
   {
@@ -125,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
