--- a/user_comedian_matrix/comments_sentiment_analysis_80clips.ipynb
+++ b/user_comedian_matrix/comments_sentiment_analysis_80clips.ipynb
@@ -632,6 +632,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# df_UCM with the average P/N score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
